--- a/cssfirst.html
+++ b/cssfirst.html
@@ -40,6 +40,6 @@
     <p>when comparing CSS class vs ID the difference is that CSS claass applies a style to multiple elements ID,on the other hand applies a style to one unique elements ID isalso apecial inthat you can use a special URL to link directly.</p>
     <p>In CSS ,sectors are used to target a specific elements or range of elements on a web page.Once an elements has been targeted,a style or set of style can be applied to the elements.</p>
     <p>There is a wide range of selectors available.Two of most commonly used are id .both are used to targeted elements which a style should be applied</p>
-    <a href="https://www.prepbytes.com/"><span><em>prepbyte home page</span></em></a>
+    <a href="https://www.prepbytes.com/"><span><em>prepbyte home page</em></span></a>
 </body>
 </html>
