--- a/list.html
+++ b/list.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>list></h1>
+    <h1>list</h1>
     <h2>ordered list</h2>
     <h3>numeric</h3>
     <ol type="1">
