--- a/table.html
+++ b/table.html
@@ -103,7 +103,7 @@
         </tr>
         
       </table>
-      <a href="/css/hands/second.html">go back</a>
+      <a href="/second.html">go back</a>
 
 </body>
 </html>
