--- a/csshand.html
+++ b/csshand.html
@@ -130,7 +130,7 @@
             <li>veg rita</li>
             <li>gol gappa</li>
             <li>tikki</li>
-            <li>fried rice</li
+            <li>fried rice</li>
            </ul>
     </div>
     <div class="menu">
@@ -143,7 +143,7 @@
             <li>veg rita</li>
             <li>gol gappa</li>
             <li>tikki</li>
-            <li>fried rice</li
+            <li>fried rice</li>
            </ul>
     </div><br>
 
@@ -171,7 +171,7 @@
             <li>veg rita</li>
             <li>gol gappa</li>
             <li>tikki</li>
-            <li>fried rice</li
+            <li>fried rice</li>
            </ul>
     </div>
     <div class="menu2">
@@ -184,7 +184,7 @@
             <li>veg rita</li>
             <li>gol gappa</li>
             <li>tikki</li>
-            <li>fried rice</li
+            <li>fried rice</li>
            </ul>
     </div>
     
